--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,122 @@
+@font-face {
+  font-family: 'Nunito';
+  src: url('./fonts/Nunito.ttf') format('truetype');
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Nunito', sans-serif;
+}
+
+:root {
+  --v-p-violet: #fcf5ff;
+  --v-p-green: #fcfff5;
+  --green: #a7b388;
+  --g-violet: #ab9ab3;
+  --l-red: #ff7875;
+}
+
+body {
+  font-size: 1rem;
+  padding: 0.5em 1em;
+  background-color: var(--v-p-violet);
+}
+
+.grid {
+  display: grid;
+  gap: 0.3rem;
+}
+
+.flex {
+  display: flex;
+}
+
+.center {
+  align-items: center;
+  justify-content: space-between;
+}
+
+button {
+  font-size: 1rem;
+  margin-top: 1rem;
+  padding: 0.5em 2em;
+  border: none;
+  border-radius: 15px;
+  background-color: var(--green);
+  cursor: pointer;
+}
+
+button:hover {
+  background-image: linear-gradient(rgb(0 0 0/20%) 0 0);
+}
+
+.content {
+  grid-template-columns: 1fr 1fr;
+}
+
+.username-form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--v-p-violet);
+  padding: 2em;
+  border-radius: 15px;
+}
+
+.username-label {
+  grid-template-columns: 400px;
+  font-size: 1.1rem;
+}
+
+.username-input {
+  background-color: var(--v-p-green);
+  font-size: 1rem;
+  padding: 0.6em;
+  border: none;
+  border-radius: 15px;
+  background-color: var(--g-violet);
+}
+
+.username-input:hover {
+  opacity: 0.9;
+}
+
+.restart-btn {
+  background-color: var(--l-red);
+}
+
 .image-container {
   position: relative;
 }
 
 .target {
   position: absolute;
+  flex-direction: column;
+}
+
+.character-list {
+  background-color: var(--v-p-violet);
+  padding: 0.6em;
+  border: none;
+  border-radius: 15px;
+}
+
+.scoreboards-container {
+  grid-template-columns: 1fr 1fr;
+  grid-column-start: -1;
+  gap: 2rem;
+}
+
+.scoreboard {
+  max-width: 20ch;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.scoreboard > ol {
+  padding: 1em;
 }
